New - Ajout de la gestion des départements

--- a/Sheaft.Manage/Views/Dashboard/Index.cshtml
+++ b/Sheaft.Manage/Views/Dashboard/Index.cshtml
@@ -36,6 +36,13 @@
                     <a asp-controller="Tags" asp-action="index" class="card-link">Show</a>
                 </div>
             </div>
+            <div class="card w-25 d-inline-block">
+                <div class="card-body">
+                    <h5 class="card-title">Departments</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">@ViewBag.Departments</h6>
+                    <a asp-controller="Departments" asp-action="index" class="card-link">Show</a>
+                </div>
+            </div>
         }
         @if (!user.IsInRole("STORE") && !user.IsInRole("CONSUMER"))
         {
