--- a/Sheaft.Manage/Views/Dashboard/Index.cshtml
+++ b/Sheaft.Manage/Views/Dashboard/Index.cshtml
@@ -57,6 +57,13 @@
                     <a asp-controller="Levels" asp-action="index" class="card-link">Show</a>
                 </div>
             </div>
+            <div class="card w-25 d-inline-block">
+                <div class="card-body">
+                    <h5 class="card-title">Rewards</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">@ViewBag.Rewards</h6>
+                    <a asp-controller="Rewards" asp-action="index" class="card-link">Show</a>
+                </div>
+            </div>
         }
         @if (!user.IsInRole("STORE") && !user.IsInRole("CONSUMER"))
         {
