--- a/Sheaft.Manage/Views/Companies/Edit.cshtml
+++ b/Sheaft.Manage/Views/Companies/Edit.cshtml
@@ -27,7 +27,7 @@
             </div>
             <div class="form-group">
                 @Html.LabelFor(c => c.Kind, new { @class = "form-label" })
-                @Html.DropDownListFor(c => c.Kind, kinds, new { @class = "form-control", @disabled="disabled" })
+                @Html.DropDownListFor(c => c.Kind, kinds, new { @class = "form-control", @disabled = "disabled" })
             </div>
             <div class="form-group">
                 @Html.LabelFor(c => c.Email, new { @class = "form-label" })
@@ -65,7 +65,7 @@
                 @Html.CheckBoxFor(m => m.AppearInBusinessSearchResults, new { @class = "form-check-input" })
                 @Html.LabelFor(m => m.AppearInBusinessSearchResults, new { @class = "form-check-label" })
             </div>
-            <br/>
+            <br />
             <h4>Address</h4>
             <div class="form-group">
                 @Html.LabelFor(c => c.Address.Line1, new { @class = "form-label" })
@@ -91,6 +91,22 @@
                 @Html.LabelFor(c => c.Address.Longitude, new { @class = "form-label" })
                 @Html.TextBoxFor(c => c.Address.Longitude, null, new { @class = "form-control" })
             </div>
+
+            <div class="form-group">
+                @Html.LabelFor(m => m.CreatedOn)
+                @Html.TextBoxFor(m => m.CreatedOn, null, new { @class = "form-control", @disabled = "disabled" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.UpdatedOn)
+                @Html.TextBoxFor(m => m.UpdatedOn, null, new { @class = "form-control", @disabled = "disabled" })
+            </div>
+            @if (Model.RemovedOn.HasValue)
+            {
+                <div class="form-group">
+                    @Html.LabelFor(m => m.RemovedOn)
+                    @Html.TextBoxFor(m => m.RemovedOn, null, new { @class = "form-control", @disabled = "disabled" })
+                </div>
+            }
 
             <br />
             <a asp-controller="Companies" asp-action="Index" class="btn btn-light">
