--- a/Sheaft.Manage/Views/Products/Edit.cshtml
+++ b/Sheaft.Manage/Views/Products/Edit.cshtml
@@ -100,6 +100,21 @@
                 @Html.CheckBoxFor(m => m.Available, new { @class = "form-check-input" })
                 @Html.LabelFor(m => m.Available, new { @class = "form-check-label" })
             </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.CreatedOn)
+                @Html.TextBoxFor(m => m.CreatedOn, null, new { @class = "form-control", @disabled = "disabled" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.UpdatedOn)
+                @Html.TextBoxFor(m => m.UpdatedOn, null, new { @class = "form-control", @disabled = "disabled" })
+            </div>
+            @if (Model.RemovedOn.HasValue)
+            {
+                <div class="form-group">
+                    @Html.LabelFor(m => m.RemovedOn)
+                    @Html.TextBoxFor(m => m.RemovedOn, null, new { @class = "form-control", @disabled = "disabled" })
+                </div>
+            }
 
             <br />
             <a asp-controller="Products" asp-action="Index" class="btn btn-light">
