--- a/Sheaft.Manage/Views/Tags/Edit.cshtml
+++ b/Sheaft.Manage/Views/Tags/Edit.cshtml
@@ -31,10 +31,6 @@
                 @Html.DropDownListFor(c => c.Kind, kinds, new { @class = "form-control" })
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.CreatedOn)
-                @Html.TextBoxFor(m => m.CreatedOn, null, new { @class = "form-control", @disabled = "disabled" })
-            </div>
-            <div class="form-group">
                 @Html.LabelFor(c => c.Image, new { @class = "form-label" })
                 @if (!string.IsNullOrWhiteSpace(Model.Image))
                 {
@@ -46,6 +42,21 @@
                 @Html.LabelFor(m => m.Description)
                 @Html.TextAreaFor(m => m.Description, new { @class = "form-control" })
             </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.CreatedOn)
+                @Html.TextBoxFor(m => m.CreatedOn, null, new { @class = "form-control", @disabled = "disabled" })
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.UpdatedOn)
+                @Html.TextBoxFor(m => m.UpdatedOn, null, new { @class = "form-control", @disabled = "disabled" })
+            </div>
+            @if (Model.RemovedOn.HasValue)
+            {
+                <div class="form-group">
+                    @Html.LabelFor(m => m.RemovedOn)
+                    @Html.TextBoxFor(m => m.RemovedOn, null, new { @class = "form-control", @disabled = "disabled" })
+                </div>
+            }
 
             <br />
             <a asp-controller="Tags" asp-action="Index" class="btn btn-light">
