New - Ajout de la gestion du RequiredProducers pour département et région

--- a/Sheaft.Manage/Views/Regions/Index.cshtml
+++ b/Sheaft.Manage/Views/Regions/Index.cshtml
@@ -29,6 +29,7 @@
                     <th scope="col">Name</th>
                     <th scope="col">Position</th>
                     <th scope="col">Points</th>
+                    <th scope="col">RequiredProducers</th>
                     <th scope="col">Producers</th>
                     <th scope="col">Stores</th>
                     <th scope="col">Consumers</th>
@@ -42,6 +43,7 @@
                     <th scope="row">@entity.Name</th>
                     <td>@entity.Position</td>
                     <td>@entity.Points</td>
+                    <td>@entity.RequiredProducers</td>
                     <td>@entity.ProducersCount</td>
                     <td>@entity.StoresCount</td>
                     <td>@entity.ConsumersCount</td>
