--- a/Sheaft.Manage/Views/Departments/Index.cshtml
+++ b/Sheaft.Manage/Views/Departments/Index.cshtml
@@ -30,6 +30,7 @@
                     <th scope="col">Position</th>
                     <th scope="col">Points</th>
                     <th scope="col">Level</th>
+                    <th scope="col">RequiredProducers</th>
                     <th scope="col">Producers</th>
                     <th scope="col">Stores</th>
                     <th scope="col">Consumers</th>
@@ -44,6 +45,7 @@
                     <td>@entity.Position</td>
                     <td>@entity.Points</td>
                     <td>@entity.Level</td>
+                    <td>@entity.RequiredProducers</td>
                     <td>@entity.ProducersCount</td>
                     <td>@entity.StoresCount</td>
                     <td>@entity.ConsumersCount</td>
