--- a/Sheaft.Manage/Views/Regions/Edit.cshtml
+++ b/Sheaft.Manage/Views/Regions/Edit.cshtml
@@ -19,6 +19,10 @@
                 @Html.TextBoxFor(m => m.Name, null, new { @class = "form-control" })
             </div>
             <div class="form-group">
+                @Html.LabelFor(m => m.RequiredProducers)
+                @Html.TextBoxFor(c => c.RequiredProducers, null, new { @class = "form-control" })
+            </div>
+            <div class="form-group">
                 @Html.LabelFor(m => m.Code)
                 @Html.TextBoxFor(m => m.Code, null, new { @class = "form-control", @disabled = "disabled" })
             </div>
