Fix - Suppression de la notion de Number pour les levels

--- a/Sheaft.Manage/Views/Levels/Index.cshtml
+++ b/Sheaft.Manage/Views/Levels/Index.cshtml
@@ -52,8 +52,7 @@
                 @foreach (var entity in Model)
                 {
                 <tr>
-                    <th scope="row">@entity.Number</th>
-                    <td>@entity.Name</td>
+                    <th scope="row">@entity.Name</th>
                     <td>@entity.RequiredPoints</td>
                     <td>@entity.CreatedOn.ToString("dd/MM/yy hh:mm")</td>
                     <td>
