Fix - Renommage manquant

--- a/Sheaft.Manage/Views/Agreements/Edit.cshtml
+++ b/Sheaft.Manage/Views/Agreements/Edit.cshtml
@@ -4,11 +4,11 @@
 
     var kinds = new List<SelectListItem>
 {
-        new SelectListItem("WaitingForProducerApproval", ((int)AgreementStatusKind.WaitingForProducerApproval).ToString()),
-        new SelectListItem("WaitingForStoreApproval", ((int)AgreementStatusKind.WaitingForStoreApproval).ToString()),
-        new SelectListItem("Accepted", ((int)AgreementStatusKind.Accepted).ToString()),
-        new SelectListItem("Cancelled", ((int)AgreementStatusKind.Cancelled).ToString()),
-        new SelectListItem("Refused", ((int)AgreementStatusKind.Refused).ToString())
+        new SelectListItem("WaitingForProducerApproval", ((int)AgreementStatus.WaitingForProducerApproval).ToString()),
+        new SelectListItem("WaitingForStoreApproval", ((int)AgreementStatus.WaitingForStoreApproval).ToString()),
+        new SelectListItem("Accepted", ((int)AgreementStatus.Accepted).ToString()),
+        new SelectListItem("Cancelled", ((int)AgreementStatus.Cancelled).ToString()),
+        new SelectListItem("Refused", ((int)AgreementStatus.Refused).ToString())
     };
 }
 
