Update - Ajout de la page de paiement Payline

--- a/Sheaft.Payment/Views/Home/Index.cshtml
+++ b/Sheaft.Payment/Views/Home/Index.cshtml
@@ -1,8 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Paiement de votre commande";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<div id="PaylineWidget" data-template="column" data-token="@ViewBag.Token"></div>
