--- a/Sheaft.Manage/Views/Rewards/Edit.cshtml
+++ b/Sheaft.Manage/Views/Rewards/Edit.cshtml
@@ -33,8 +33,8 @@
                 @Html.TextBoxFor(m => m.Phone, null, new { @class = "form-control" })
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.Image)
-                @Html.TextBoxFor(m => m.Image, null, new { @class = "form-control" })
+                @Html.LabelFor(m => m.Picture)
+                @Html.TextBoxFor(m => m.Picture, null, new { @class = "form-control" })
             </div>
             <div class="form-group">
                 @Html.LabelFor(m => m.Url)
